# SparkFlow

./: .env.example  .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sql  package.json  todo.md
apps/agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml  requirements.txt
apps/agent/app/: main.py
apps/agent/app/agents/: agent.py  config.py  graph.py  prompts.py  states.py  tools.py
apps/agent/app/api/: chat.py
apps/agent/app/core/: auth.py
apps/agent/app/models/: chat.py
apps/agent/config/: rag_agent.py
apps/agent/graphs/: rag_agent.py
apps/agent/middleware/: __init__.py  chunk_accumulator.py  prompt_optimizer.py  query_optimizer.py  sources_context.py
apps/agent/prompts/: prompt_optimizer.py  rag_agent.py
apps/agent/tools/: prompt_optimizer.py  ragflow.py
apps/web/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
apps/web/app/: error.tsx  globals.css  layout.tsx  page.tsx
apps/web/components/: theme-toggle.tsx
apps/web/docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
apps/web/hooks/: use-echarts.ts
apps/web/lib/: auth.config.ts  auth.ts  crawl4ai-client.ts  mineru-client.ts  prisma.ts  prompt-optimizer.ts  ragflow-client.ts  s3-client.ts
apps/web/prisma/: schema.prisma
apps/web/scripts/: import-publications.ts  import-sessions.ts
apps/web/types/: api.ts  (+4 more)
scripts/: release.sh
(+121 files in other folders)
